# semcs

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Cross.toml  DOCS_INVENTORY.md  EMBEDDING_ARCHITECTURE.md  EXAMPLES.md  FEATURE_PDF_SUPPORT.md  INDEX_BEHAVIOR.md  LICENSE-MIT  PHASE1_PRD.md  PRD.txt  README.md  TUI.md  UNEXPECTED.md  debug_haskell.rs  install.sh  prd_query_based_tree_sitter_chunking.md  test_ck.sh  test_ck_simple.sh  test_exclude.rs  vscode_prd.md
.cs/: CHANGELOG.md.cs  CLAUDE.md.cs  CONFIG_QUICK_REFERENCE.md.cs  Cargo.lock.cs  Cargo.toml.cs  EXAMPLES.md.cs  FINAL_RENAME_SUMMARY.md.cs  LICENSE-APACHE.cs  LICENSE-MIT.cs  POST_MIGRATION_GUIDE.md.cs  PRD.txt.cs  QUICK_TEST_COMMANDS.md.cs  README.md  README.md.cs  RENAME_COMPLETE.md.cs  RENAME_PLAN.md.cs  RENAME_STATUS.md.cs  SESSION_SUMMARY_2025-10-15.md.cs  TEST_v0.6.1.md.cs  TUI.md.cs  UNEXPECTED.md.cs  build_after_rename.sh.cs  build_after_rename_v2.sh.cs  check_index.sh.cs  fix_naming_conflict.sh.cs  install.sh.cs  manifest.json  migrate_to_cs.sh.cs  monitor_index.sh.cs  rename_cc_to_cs.sh.cs  setup_cs.sh.cs  start_index.sh.cs  test_config.sh.cs  vscode_prd.md.cs
.cs/cs-ann/: Cargo.toml.cs
.cs/cs-chunk/: Cargo.toml.cs
.cs/cs-cli/: Cargo.toml.cs
.cs/cs-core/: Cargo.toml.cs
.cs/cs-embed/: Cargo.toml.cs
.cs/cs-engine/: Cargo.toml.cs
.cs/cs-index/: Cargo.toml.cs
.cs/cs-models/: Cargo.toml.cs
.cs/cs-tui/: Cargo.toml.cs
.cs/cs-vscode/: GETTING_STARTED.md.cs  LICENSE-APACHE.cs  LICENSE-MIT.cs  LICENSE.cs  README.md.cs  install-cursor.sh.cs  (+3 more)
benchmarks/: .gitignore  QUICK_START.md  README.md  pyproject.toml
benchmarks/automation/: quick_test.sh  test_runner.py
benchmarks/comparison_data/: cs_hybrid_calls.txt  grep_baseline_calls.txt
benchmarks/docs/archive/: BENCHMARK_IMPLEMENTATION_SUMMARY.md  CLEANUP_SUMMARY.md  CODING_AGENT_INTEGRATION.md  CS_VS_GREP_ANALYSIS.md  DOCS_CLEANUP_PLAN.md  ENHANCED_BENCHMARK_DESIGN.md  FILE_MANIFEST.md  FINAL_CLEANUP.md  HUMAN_FRIENDLY_GUIDE.md  OPTIMIZATION_PLAN.md  QUICK_TEST_COMMANDS.md  README.md
benchmarks/quantitative/agents/: README.md
benchmarks/quantitative/datasets/: README.md
benchmarks/quantitative/eval/: metrics.py
benchmarks/quantitative/tasks/: README.md
benchmarks/real_world/agents/: baseline_agent.py  cs_hybrid_agent.py
benchmarks/real_world/datasets/: README.md
benchmarks/real_world/tasks/: code_comprehension_tasks.yaml
benchmarks/specs/: INDEX.md  README.md
benchmarks/specs/plan/: ARCHITECTURE.md  GAP_ANALYSIS.md  SYSTEM_PROMPTS.md
benchmarks/specs/tasks/: WEEK_BY_WEEK.md
benchmarks/test_scenarios/: 01_error_handling_audit.sh  02_config_system_trace.sh  03_api_integration_locate.sh  04_cross_language_refactor.sh  05_recursive_navigation.sh  README.md  run_all_scenarios.sh
cc-ann/: Cargo.toml
cc-chunk/: Cargo.toml
cc-chunk/examples/: debug_chunks.rs
cc-chunk/queries/go/: tags.scm
cc-chunk/src/: lib.rs  query_chunker.rs
cc-cli/: Cargo.toml
cc-cli/src/: lib.rs  main.rs  mcp_server.rs  path_utils.rs
cc-cli/src/mcp/: cache.rs  context.rs  session.rs
cc-cli/src/mcp/tools/: mod.rs
cc-cli/tests/: integration_tests.rs  mcp_tests.rs
cc-core/: Cargo.toml
cc-embed/: Cargo.toml
cc-embed/examples/: test_nomic.rs  test_reranking.rs
cc-embed/src/: lib.rs  reranker.rs
cc-engine/: Cargo.toml
cc-engine/src/: lib.rs  semantic_v3.rs
cc-index/: Cargo.toml
cc-index/src/: lib.rs
cc-models/: Cargo.toml
cc-tui/: Cargo.toml
cc-tui/src/: app.rs  chunks.rs  commands.rs  config.rs  events.rs  lib.rs  preview.rs  rendering.rs  state.rs  utils.rs
cc-vscode/: GETTING_STARTED.md  README.md  install-cursor.sh  package-lock.json  package.json
ck-ann/: Cargo.toml
ck-ann/src/: lib.rs
ck-chunk/: Cargo.toml
ck-chunk/examples/: debug_chunks.rs
ck-chunk/queries/haskell/: tags.scm
ck-chunk/queries/javascript/: tags.scm
ck-chunk/queries/ruby/: tags.scm
ck-chunk/queries/rust/: tags.scm
ck-chunk/src/: lib.rs  query_chunker.rs
ck-cli/: Cargo.toml
ck-cli/src/: lib.rs  main.rs  mcp_server.rs  path_utils.rs  progress.rs
ck-cli/src/mcp/: cache.rs  context.rs  mod.rs  session.rs
ck-cli/src/mcp/tools/: mod.rs
ck-cli/src/tui/: mod.rs  state.rs
ck-cli/tests/: integration_tests.rs  mcp_tests.rs
ck-core/: Cargo.toml
ck-core/src/: heatmap.rs  lib.rs
ck-embed/: Cargo.toml
ck-embed/examples/: list_models.rs  test_nomic.rs  test_reranking.rs
ck-embed/src/: lib.rs  reranker.rs  tokenizer.rs
ck-engine/: Cargo.toml
ck-engine/src/: lib.rs  semantic_v3.rs
ck-index/: Cargo.toml
ck-index/src/: lib.rs
ck-models/: Cargo.toml
ck-models/src/: lib.rs
ck-search/: Cargo.toml
ck-tui/: Cargo.toml
ck-vscode/: GETTING_STARTED.md  README.md  install-cursor.sh  package-lock.json  package.json
cs-ann/: Cargo.toml
cs-ann/src/: lib.rs
cs-chunk/: Cargo.toml
cs-chunk/examples/: debug_chunks.rs
cs-chunk/queries/csharp/: tags.scm
cs-chunk/queries/python/: tags.scm
cs-chunk/queries/typescript/: tags.scm
cs-chunk/queries/zig/: tags.scm
cs-chunk/src/: lib.rs
cs-cli/: Cargo.toml
cs-cli/src/: main.rs  mcp_server.rs  path_utils.rs
cs-cli/src/mcp/: cache.rs  context.rs  errors.rs  session.rs
cs-cli/tests/: integration_tests.rs  mcp_tests.rs
cs-core/: Cargo.toml
cs-embed/: Cargo.toml
cs-embed/examples/: test_nomic.rs  test_reranking.rs
cs-embed/src/: jina_api.rs  jina_api_reranker.rs  lib.rs  reranker.rs
cs-engine/: Cargo.toml
cs-engine/src/: ast_search.rs  lib.rs  semantic_v3.rs
cs-index/: Cargo.toml
cs-index/src/: lib.rs
cs-models/: Cargo.toml
cs-models/src/: lib.rs  user_config.rs
cs-tui/: Cargo.toml
cs-tui/src/: app.rs  chunks.rs  commands.rs  config.rs  events.rs  preview.rs  rendering.rs  state.rs  utils.rs
cs-vscode/: GETTING_STARTED.md  LICENSE  README.md  package.json
demo_files/: demo1.txt  demo10.txt  demo2.txt  demo4.txt  demo6.txt  demo7.txt
docs/: _config.yml  copy-test.md  index.md  search-modes.md
examples/: README.md  demo_full_section.sh  full_section_demo.py  haskell_sample.hs  quick_demo.sh
test_dir/: root.txt
(+266 files in other folders)
