[workspace]
resolver = "2"
members = [
    "ck-cli",
    "ck-core",
    "ck-index",
    "ck-search",
    "ck-chunk",
    "ck-embed",
    "ck-ann",
    "ck-models",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["ck contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/ck"

[workspace.dependencies]
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
clap = { version = "4.4", features = ["derive"] }
regex = "1.10"
blake3 = "1.5"
memmap2 = "0.9"
bincode = "1.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rayon = "1.8"
walkdir = "2.4"
tantivy = "0.24"
tree-sitter = "0.20"
tree-sitter-python = "0.20"
tree-sitter-typescript = "0.20"
fastembed = "5.1"
tempfile = "3.8"
glob = "0.3"
globset = "0.4"