[workspace]
resolver = "2"
members = [
    "ck-cli",
    "ck-core",
    "ck-index",
    "ck-engine",
    "ck-chunk",
    "ck-embed",
    "ck-ann",
    "ck-models",
]

[workspace.package]
version = "0.3.7"
edition = "2024"
authors = ["Mike Renwick"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/BeaconBay/ck"
rust-version = "1.88.0"

[workspace.dependencies]
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
clap = { version = "4.4", features = ["derive"] }
regex = "1.10"
blake3 = "1.5"
memmap2 = "0.9"
bincode = "1.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rayon = "1.8"
walkdir = "2.4"
tantivy = "0.24"
tree-sitter = "0.22"
tree-sitter-python = "0.21"
tree-sitter-typescript = "0.21"
tree-sitter-haskell = "0.21"
tree-sitter-rust = "0.21"
tree-sitter-ruby = "0.21"
tree-sitter-go = "0.21"
fastembed = "5.1"
tempfile = "3.8"
glob = "0.3"
globset = "0.4"
ignore = "0.4"