[package]
name = "cc-ann"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Approximate nearest neighbor search for cc semantic search"
repository = "https://github.com/BeaconBay/cc"
keywords = ["search", "ann", "vector"]
categories = ["algorithms"]

[dependencies]
cc-core = { version = "0.6.0", path = "../cc-core" }

anyhow = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
# instant-distance = { workspace = true }  # Temporarily disabled

[dev-dependencies]
tempfile = "3.8"