[package]
name = "cc-chunk"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Text chunking and parsing for cc semantic search"
repository = "https://github.com/BeaconBay/cc"
keywords = ["parsing", "chunking", "tree-sitter"]
categories = ["parsing"]

[dependencies]
cc-core = { version = "0.6.0", path = "../cc-core" }
cc-embed = { version = "0.6.0", path = "../cc-embed" }

anyhow = { workspace = true }
serde = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-python = { workspace = true }
tree-sitter-typescript = { workspace = true }
tree-sitter-haskell = { workspace = true }
tree-sitter-rust = { workspace = true }
tree-sitter-ruby = { workspace = true }
tree-sitter-go = { workspace = true }
tree-sitter-c-sharp = { workspace = true }
tree-sitter-zig = { workspace = true }
tracing = { workspace = true }
hf-hub = "0.3"
tokenizers = { version = "0.22", default-features = false, features = ["onig", "progressbar"] }