[package]
name = "cc-search"
version = "0.6.0"
edition = "2024"
authors = ["Mike Renwick"]
license = "MIT OR Apache-2.0"
rust-version = "1.88.0"
description = "Semantic grep by embedding - find code by meaning, not just keywords"
repository = "https://github.com/BeaconBay/cc"
homepage = "https://github.com/BeaconBay/cc"
readme = "../README.md"
keywords = ["grep", "search", "semantic", "code", "cli"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "cc"
path = "src/main.rs"

[lib]
name = "cc_search"
path = "src/lib.rs"

[dependencies]
cc-core = { version = "0.6.0", path = "../cc-core" }
cc-index = { version = "0.6.0", path = "../cc-index" }
cc-engine = { version = "0.6.0", path = "../cc-engine" }
cc-chunk = { version = "0.6.0", path = "../cc-chunk" }
cc-embed = { version = "0.6.0", path = "../cc-embed" }
cc-ann = { version = "0.6.0", path = "../cc-ann" }
cc-models = { version = "0.6.0", path = "../cc-models" }
cc-tui = { version = "0.6.0", path = "../cc-tui" }

anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rmcp = { version = "0.6", features = ["transport-io"] }
rmcp-macros = "0.6"
tokio-util = { version = "0.7", features = ["rt", "full"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = { workspace = true }
schemars = "1.0"
glob = { workspace = true }
globset = { workspace = true }
regex = { workspace = true }
indicatif = "0.17"
console = "0.15"
owo-colors = "4.0"
walkdir = "2.3"
ratatui = "0.26"
crossterm = "0.27"
shlex = "1.3"
syntect = "5.2"
openssl = { workspace = true, optional = true }
uuid = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
dirs = "5.0"

[features]
vendored-openssl = ["openssl?/vendored"]

[dev-dependencies]
tempfile = { workspace = true }
serial_test = "2.0"
