[package]
name = "cc-embed"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Text embedding providers for cc semantic search"
repository = "https://github.com/BeaconBay/cc"
keywords = ["embedding", "nlp", "semantic"]
categories = ["science"]

[dependencies]
cc-core = { version = "0.6.0", path = "../cc-core" }

anyhow = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }

fastembed = { workspace = true, optional = true }

[features]
default = ["fastembed"]
fastembed = ["dep:fastembed"]