[package]
name = "cc-index"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Indexing and storage for cc semantic search"
repository = "https://github.com/BeaconBay/cc"
keywords = ["indexing", "search", "storage"]
categories = ["database-implementations"]

[dependencies]
cc-core = { version = "0.6.0", path = "../cc-core" }
cc-chunk = { version = "0.6.0", path = "../cc-chunk" }
cc-embed = { version = "0.6.0", path = "../cc-embed" }
cc-models = { version = "0.6.0", path = "../cc-models" }

anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
blake3 = { workspace = true }
memmap2 = { workspace = true }
tokio = { workspace = true }
rayon = { workspace = true }
walkdir = { workspace = true }
tracing = { workspace = true }
ignore = { workspace = true }
ctrlc = { workspace = true }
pdf-extract = { workspace = true }
tempfile = { workspace = true }

[dev-dependencies]
