[package]
name = "cc-models"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Model registry and configuration for cc semantic search"
repository = "https://github.com/BeaconBay/cc"
keywords = ["models", "config", "registry"]
categories = ["config"]

[dependencies]
cc-core = { version = "0.6.0", path = "../cc-core" }

anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }