[package]
name = "cc-tui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Terminal UI for cc semantic search"
repository = "https://github.com/BeaconBay/cc"
keywords = ["tui", "terminal", "ui", "search"]
categories = ["command-line-utilities"]

[dependencies]
cc-core = { version = "0.6.0", path = "../cc-core" }
cc-index = { version = "0.6.0", path = "../cc-index" }
cc-chunk = { version = "0.6.0", path = "../cc-chunk" }
cc-embed = { version = "0.6.0", path = "../cc-embed" }
cc-engine = { version = "0.6.0", path = "../cc-engine" }

anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
ratatui = "0.26"
crossterm = "0.27"
syntect = "5.2"
shlex = "1.3"
dirs = "5.0"

