[package]
name = "ck-ann"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
ck-core = { path = "../ck-core" }

anyhow = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
# instant-distance = { workspace = true }  # Temporarily disabled

[dev-dependencies]
tempfile = "3.8"