[package]
name = "ck-ann"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Approximate nearest neighbor search for ck semantic search"
repository = "https://github.com/yourusername/ck"
keywords = ["search", "ann", "vector"]
categories = ["algorithms"]

[dependencies]
ck-core = "0.3.1"

anyhow = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
# instant-distance = { workspace = true }  # Temporarily disabled

[dev-dependencies]
tempfile = "3.8"