[package]
name = "ck-chunk"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
ck-core = { path = "../ck-core" }

anyhow = { workspace = true }
serde = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-python = { workspace = true }
tree-sitter-typescript = { workspace = true }