[package]
name = "ck-chunk"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Text chunking and parsing for ck semantic search"
repository = "https://github.com/yourusername/ck"
keywords = ["parsing", "chunking", "tree-sitter"]
categories = ["parsing"]

[dependencies]
ck-core = "0.3.1"

anyhow = { workspace = true }
serde = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-python = { workspace = true }
tree-sitter-typescript = { workspace = true }
tracing = { workspace = true }