[package]
name = "ck-search"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Semantic grep by embedding - find code by meaning, not just keywords"
repository = "https://github.com/yourusername/ck"
homepage = "https://github.com/yourusername/ck"
readme = "../README.md"
keywords = ["grep", "search", "semantic", "code", "cli"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "ck"
path = "src/main.rs"

[dependencies]
ck-core = { path = "../ck-core" }
ck-index = { path = "../ck-index" }
ck-engine = { path = "../ck-engine" }
ck-chunk = { path = "../ck-chunk" }
ck-embed = { path = "../ck-embed" }
ck-ann = { path = "../ck-ann" }
ck-models = { path = "../ck-models" }

anyhow = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
glob = { workspace = true }
globset = { workspace = true }
regex = { workspace = true }
indicatif = "0.17"
console = "0.15"
owo-colors = "4.0"

[dev-dependencies]
tempfile = { workspace = true }