[package]
name = "ck-search"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Semantic grep by embedding - find code by meaning, not just keywords"
repository = "https://github.com/BeaconBay/ck"
homepage = "https://github.com/BeaconBay/ck"
readme = "../README.md"
keywords = ["grep", "search", "semantic", "code", "cli"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "ck"
path = "src/main.rs"

[dependencies]
ck-core = { version = "0.3.2", path = "../ck-core" }
ck-index = { version = "0.3.2", path = "../ck-index" }
ck-engine = { version = "0.3.2", path = "../ck-engine" }
ck-chunk = { version = "0.3.2", path = "../ck-chunk" }
ck-embed = { version = "0.3.2", path = "../ck-embed" }
ck-ann = { version = "0.3.2", path = "../ck-ann" }
ck-models = { version = "0.3.2", path = "../ck-models" }

anyhow = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
glob = { workspace = true }
globset = { workspace = true }
regex = { workspace = true }
indicatif = "0.17"
console = "0.15"
owo-colors = "4.0"

[dev-dependencies]
tempfile = { workspace = true }