[package]
name = "ck-search"
version = "0.4.5"
edition = "2024"
authors = ["Mike Renwick"]
license = "MIT OR Apache-2.0"
rust-version = "1.88.0"
description = "Semantic grep by embedding - find code by meaning, not just keywords"
repository = "https://github.com/BeaconBay/ck"
homepage = "https://github.com/BeaconBay/ck"
readme = "../README.md"
keywords = ["grep", "search", "semantic", "code", "cli"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "ck"
path = "src/main.rs"

[dependencies]
ck-core = { version = "0.4.5", path = "../ck-core" }
ck-index = { version = "0.4.5", path = "../ck-index" }
ck-engine = { version = "0.4.5", path = "../ck-engine" }
ck-chunk = { version = "0.4.5", path = "../ck-chunk" }
ck-embed = { version = "0.4.5", path = "../ck-embed" }
ck-ann = { version = "0.4.5", path = "../ck-ann" }
ck-models = { version = "0.4.5", path = "../ck-models" }

anyhow = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
glob = { workspace = true }
globset = { workspace = true }
regex = { workspace = true }
indicatif = "0.17"
console = "0.15"
owo-colors = "4.0"
openssl = { workspace = true, optional = true }

[features]
vendored-openssl = ["openssl?/vendored"]

[dev-dependencies]
tempfile = { workspace = true }