[package]
name = "ck-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Core types and utilities for ck semantic search tool"
repository = "https://github.com/BeaconBay/ck"
keywords = ["search", "semantic", "core"]
categories = ["data-structures"]

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
blake3 = { workspace = true }
regex = { workspace = true }
bincode = { workspace = true }

[dev-dependencies]
tempfile = "3.8"