[package]
name = "ck-embed"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Text embedding providers for ck semantic search"
repository = "https://github.com/yourusername/ck"
keywords = ["embedding", "nlp", "semantic"]
categories = ["science"]

[dependencies]
ck-core = "0.3.1"

anyhow = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }

fastembed = { workspace = true, optional = true }

[features]
default = ["fastembed"]
fastembed = ["dep:fastembed"]