[package]
name = "ck-embed"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Text embedding providers for ck semantic search"
repository = "https://github.com/BeaconBay/ck"
keywords = ["embedding", "nlp", "semantic"]
categories = ["science"]

[dependencies]
ck-core = { version = "0.5.3", path = "../ck-core" }

anyhow = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }

fastembed = { workspace = true, optional = true }

[features]
default = ["fastembed"]
fastembed = ["dep:fastembed"]