[package]
name = "ck-engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Search engine implementation for ck semantic search"
repository = "https://github.com/yourusername/ck"
keywords = ["search", "engine", "semantic"]
categories = ["algorithms"]

[dependencies]
ck-core = "0.3.1"
ck-index = "0.3.1"
ck-embed = "0.3.1"
ck-ann = "0.3.1"
ck-chunk = "0.3.1"
serde_json = { workspace = true }

anyhow = { workspace = true }
serde = { workspace = true }
regex = { workspace = true }
tantivy = { workspace = true }
tokio = { workspace = true }
rayon = { workspace = true }
walkdir = { workspace = true }
tracing = { workspace = true }
globset = { workspace = true }

[dev-dependencies]
tempfile = "3.8"