[package]
name = "ck-engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Search engine implementation for ck semantic search"
repository = "https://github.com/BeaconBay/ck"
keywords = ["search", "engine", "semantic"]
categories = ["algorithms"]

[dependencies]
ck-core = { version = "0.4.5", path = "../ck-core" }
ck-index = { version = "0.4.5", path = "../ck-index" }
ck-embed = { version = "0.4.5", path = "../ck-embed" }
ck-ann = { version = "0.4.5", path = "../ck-ann" }
ck-chunk = { version = "0.4.5", path = "../ck-chunk" }
serde_json = { workspace = true }

anyhow = { workspace = true }
serde = { workspace = true }
regex = { workspace = true }
tantivy = { workspace = true }
tokio = { workspace = true }
rayon = { workspace = true }
walkdir = { workspace = true }
tracing = { workspace = true }
globset = { workspace = true }

[dev-dependencies]
tempfile = "3.8"