[package]
name = "ck-index"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Indexing and storage for ck semantic search"
repository = "https://github.com/yourusername/ck"
keywords = ["indexing", "search", "storage"]
categories = ["database-implementations"]

[dependencies]
ck-core = "0.3.1"
ck-chunk = "0.3.1"
ck-embed = "0.3.1"

anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
blake3 = { workspace = true }
memmap2 = { workspace = true }
tokio = { workspace = true }
rayon = { workspace = true }
walkdir = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }