[package]
name = "ck-index"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Indexing and storage for ck semantic search"
repository = "https://github.com/BeaconBay/ck"
keywords = ["indexing", "search", "storage"]
categories = ["database-implementations"]

[dependencies]
ck-core = { version = "0.4.5", path = "../ck-core" }
ck-chunk = { version = "0.4.5", path = "../ck-chunk" }
ck-embed = { version = "0.4.5", path = "../ck-embed" }
ck-models = { version = "0.4.5", path = "../ck-models" }

anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
blake3 = { workspace = true }
memmap2 = { workspace = true }
tokio = { workspace = true }
rayon = { workspace = true }
walkdir = { workspace = true }
tracing = { workspace = true }
ignore = { workspace = true }
ctrlc = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }