[package]
name = "ck-models"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Model registry and configuration for ck semantic search"
repository = "https://github.com/yourusername/ck"
keywords = ["models", "config", "registry"]
categories = ["config"]

[dependencies]
ck-core = "0.3.1"

anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }