[package]
name = "cs-index"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Indexing and storage for cc semantic search"
repository = "https://github.com/lwyBZss8924d/semcs"
keywords = ["indexing", "search", "storage"]
categories = ["database-implementations"]

[dependencies]
cs-core = { version = "0.6.1", path = "../cs-core" }
cs-chunk = { version = "0.6.1", path = "../cs-chunk" }
cs-embed = { version = "0.6.1", path = "../cs-embed" }
cs-models = { version = "0.6.1", path = "../cs-models" }

anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
blake3 = { workspace = true }
memmap2 = { workspace = true }
tokio = { workspace = true }
rayon = { workspace = true }
walkdir = { workspace = true }
tracing = { workspace = true }
ignore = { workspace = true }
ctrlc = { workspace = true }
pdf-extract = { workspace = true }
tempfile = { workspace = true }

[dev-dependencies]
