[package]
name = "cs-tui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Terminal UI for cc semantic search"
repository = "https://github.com/lwyBZss8924d/semcs"
keywords = ["tui", "terminal", "ui", "search"]
categories = ["command-line-utilities"]

[dependencies]
cs-core = { version = "0.6.1", path = "../cs-core" }
cs-index = { version = "0.6.1", path = "../cs-index" }
cs-chunk = { version = "0.6.1", path = "../cs-chunk" }
cs-embed = { version = "0.6.1", path = "../cs-embed" }
cs-engine = { version = "0.6.1", path = "../cs-engine" }

anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
ratatui = "0.26"
crossterm = "0.27"
syntect = "5.2"
shlex = "1.3"
dirs = "5.0"

